# controle-planos

./: .gitignore  ControleClientes_corrigido.csv  Controle_de_Planos_Flask.code-workspace  README.md  arquivos_para_deletar.txt  arquivos_para_limpar.txt  criar_executavel.bat  criar_requirements.py  debug.py  estrutura.txt  iniciar_sistema.bat  lista_arquivos.txt  requirements.txt  setup.py  t.args.get('nome', '') }} placeholder=Buscar por nome...  wsgi.py
backup_projeto/: .env.example  .gitignore  README.md  ativar.sh  check_db.py  direnv  iniciar_sistema.bat  iniciar_sistema.sh  inspect_sqlalchemy.py  instalador.iss  pyproject.toml  remove_tab_temp.py
backup_projeto/app/: __init__.py  app.py  extensions.py  iniciar_sistema.bat
backup_projeto/app/blueprints/: __init__.py
backup_projeto/app/blueprints/administradoras/: forms.py  routes.py
backup_projeto/app/blueprints/clientes/: __init__.py
backup_projeto/app/blueprints/confiauto/: __init__.py  routes.py
backup_projeto/app/blueprints/operadoras/: __init__.py  routes.py
backup_projeto/app/blueprints/planos/: __init__.py  routes.py
backup_projeto/app/blueprints/precos_faixa_etaria/: __init__.py  routes.py
backup_projeto/app/blueprints/vendas/: routes.py
backup_projeto/app/static/css/: clientes.css  custom-dark.css  dashboard.css  forgot-pasword.css  sidebar.css  style.css
backup_projeto/app/static/js/: password-strength.js  script.js  theme-toggle.js
backup_projeto/app/templates/: _form_helpers.html  base.html  dashboard-Antes.html
backup_projeto/migrations/versions/: 938e1abc0db6_initial.py
(+66 files in other folders)
